--- a/Website/src/app.pcss
+++ b/Website/src/app.pcss
@@ -46,7 +46,7 @@
 		--border: 217.2 32.6% 17.5%;
 		--input: 217.2 32.6% 17.5%;
 		--ring: 224.3 76.3% 48%;
-		--divider: rgba(159 166 173 / 0.16)
+		--divider: rgba(159 166 173 / 0.16);
 	}
 }
 
@@ -54,7 +54,7 @@
 	* {
 		@apply border-border;
 		--header-height: 3.5rem;
-		--navigation-width: min(25%, 300px)
+		--navigation-width: min(25%, 300px);
 	}
 	body {
 		@apply bg-background text-foreground;
